bpo-31752: Fix possible crash in timedelta constructor called with custom integers. (#3947)

Bad remainder in divmod() in intermediate calculations caused an assertion failure.